[gd_scene load_steps=8 format=3 uid="uid://des8iakulwgr5"]

[ext_resource type="PackedScene" uid="uid://48l2vnrueam4" path="res://Graphic Elements/popups/my_popup.tscn" id="1_o4ltu"]
[ext_resource type="Script" uid="uid://y2nd61es75ct" path="res://Graphic Elements/popups/actual_in_game_options.gd" id="2_evtk7"]
[ext_resource type="PackedScene" uid="uid://c5uhhdm6s5ims" path="res://Graphic Elements/Buttons/my_button.tscn" id="3_18xpa"]
[ext_resource type="Theme" uid="uid://c8cfcbe6ioxu5" path="res://Graphic Elements/Themes/subTab.tres" id="4_o4ltu"]
[ext_resource type="PackedScene" uid="uid://cj8ilswgtmol3" path="res://discard_filter.tscn" id="5_evtk7"]
[ext_resource type="PackedScene" uid="uid://bgjlwljhs8ia8" path="res://master_volume.tscn" id="5_wq30p"]
[ext_resource type="Script" uid="uid://cectcxesb42m" path="res://master_volume.gd" id="6_kshf8"]

[node name="ActualInGameOptions" instance=ExtResource("1_o4ltu")]
script = ExtResource("2_evtk7")

[node name="Window" parent="Panel/CenterContainer" index="0"]
custom_minimum_size = Vector2(600, 1000)

[node name="Title" parent="Panel/CenterContainer/Window/VBoxContainer" index="0"]
text = "Options"

[node name="Text" parent="Panel/CenterContainer/Window/VBoxContainer" index="1"]
text = ""

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer/Window/VBoxContainer" index="2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Encyclopedia" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer" index="0" instance=ExtResource("3_18xpa")]
layout_mode = 2
theme = ExtResource("4_o4ltu")
theme_override_font_sizes/font_size = 20
text = " Encyclopedia "

[node name="keybinds" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer" index="1" instance=ExtResource("3_18xpa")]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = " Key Bindings "

[node name="Credits" type="Button" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer" index="2"]
layout_mode = 2
theme = ExtResource("4_o4ltu")
theme_override_font_sizes/font_size = 20
text = " Credits "

[node name="masterVolume" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer" index="3" instance=ExtResource("5_wq30p")]
layout_mode = 2
script = ExtResource("6_kshf8")

[node name="DiscardFilter" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer" index="4" instance=ExtResource("5_evtk7")]
layout_mode = 2
theme = null

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/CenterContainer/Window/VBoxContainer" index="3"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="Save" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2" index="0" instance=ExtResource("3_18xpa")]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("4_o4ltu")
theme_override_font_sizes/font_size = 25
text = "Save"

[node name="Return" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2" index="1" instance=ExtResource("3_18xpa")]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("4_o4ltu")
theme_override_font_sizes/font_size = 25
text = "Return to Game"

[node name="Spacer" type="Control" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2" index="2"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer/Encyclopedia" to="." method="_on_encyclopedia_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer/keybinds" to="." method="_on_keybinds_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2/Return" to="." method="_on_return_pressed"]
